# Ledger_mind

./: .gitignore  README.md  pyproject.toml  quantization_explained.txt  requirements.txt  technical_report_rag_vs_finetuning.txt
artifacts/: evaluation_results.json  weaviate_ingestion.json
data/cleaned/: annual_report_2024_cleaned.txt  chunks.jsonl
data/qa_pairs/: golden_test_set.jsonl  split_metadata.json  train.jsonl  uber_report_qa_pairs.jsonl  uber_report_qa_pairs_metadata.json
notebooks/: 01_clean_dataset.ipynb  01_data_factory.ipynb  01_finetune_dataset.ipynb  02_finetuning_intern.ipynb  02_rag_librarian.ipynb  03_rag_librarian.ipynb  04_evaluation_arena.ipynb
src/config/: config.yaml
src/scripts/: ingest_to_weaviate.py
src/services/: llm_services.py  qa_generator.py  weaviate_client.py
src/utils/: __init__.py  document_loader.py  split_dataset.py  text_splitter.py
