[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ledger-mind"
version = "0.1.0"
description = "Financial document analysis using RAG and Q/A generation pipeline"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = [
    "rag",
    "llm",
    "financial-analysis",
    "question-answering",
    "document-processing",
    "langchain",
    "llamaindex"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core data processing
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "matplotlib>=3.7.0",
    "pyarrow>=14.0.0",
    # Machine Learning & Embeddings
    "scikit-learn>=1.3.0",
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
    # Vector Database
    "chromadb>=0.4.0",
    # LangChain Core
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-community>=0.0.20",
    "langchain-text-splitters>=0.0.1",
    # LangChain LLM Providers
    "langchain-openai>=0.0.5",
    "langchain-groq>=0.0.1",
    "langchain-google-genai>=0.0.5",
    "langchain-cohere>=0.0.3",
    # LangChain Vector Stores
    "langchain-chroma>=0.1.0",
    # LlamaIndex Core
    "llama-index>=0.10.0",
    # LlamaIndex LLM Providers
    "llama-index-llms-openai>=0.1.0",
    "llama-index-llms-groq>=0.1.0",
    "llama-index-llms-gemini>=0.1.0",
    # LlamaIndex Embedding Providers
    "llama-index-embeddings-openai>=0.1.0",
    "llama-index-embeddings-cohere>=0.1.0",
    "llama-index-embeddings-huggingface>=0.1.0",
    # LlamaIndex Vector Stores
    "llama-index-vector-stores-chroma>=0.1.0",
    # LLM API Clients
    "openai>=1.0.0",
    "groq>=0.4.0",
    "google-generativeai>=0.3.0",
    "cohere>=4.0.0",
    # Document Processing
    "pypdf>=3.0.0",
    # Sparse Retrieval
    "rank-bm25>=0.2.2",
    # Environment Management
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    # Progress bars
    "tqdm>=4.65.0",
    # Compatibility
    "packaging>=23.0",
    "langchain-huggingface>=1.2.1",
]

[project.optional-dependencies]
# Jupyter notebook dependencies
notebooks = [
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "ipywidgets>=8.0.0",
    "jupyterlab>=4.0.0",
]

# Development dependencies
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
]

# All optional dependencies
all = [
    "ledger-mind[notebooks,dev]",
]

[project.urls]
Homepage = "https://github.com/yourusername/ledger-mind"
Repository = "https://github.com/yourusername/ledger-mind"
Issues = "https://github.com/yourusername/ledger-mind/issues"

[tool.setuptools]
package-dir = {"" = "."}
packages = ["src.config", "src.services", "src.utils"]

[tool.setuptools.package-data]
"src.config" = ["*.yaml"]

# Black configuration
[tool.black]
line-length = 100
target-version = ["py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | mp01
  | mp_01
)/
'''

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    "mp01",
    "mp_01",
    ".venv",
    "venv",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py

# MyPy configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "silent"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "langchain.*",
    "llama_index.*",
    "chromadb.*",
    "sentence_transformers.*",
    "groq.*",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/mp01/*",
    "*/mp_01/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
